fix(problem): fix problem view page's problem title's text wrap

--- a/src/pages/problem/view/ProblemViewPage.module.less
+++ b/src/pages/problem/view/ProblemViewPage.module.less
@@ -10,10 +10,8 @@
     flex-grow: 1;
 
     .header {
-      display: flex;
-      align-items: center;
-
       .lastAcceptedSubmission {
+        vertical-align: top;
         font-size: 0.7em;
         margin-right: 3px;
       }
@@ -21,7 +19,7 @@
       .languageSelectIcon {
         margin-left: 10px;
         font-size: 17px;
-        vertical-align: bottom;
+        vertical-align: top;
       }
     }
 
